# event-sourcing-rs

./: Cargo.toml  README.md
event-sourcing/src/: aggregate.rs  command_handler.rs  event.rs  lib.rs  projection.rs  snapshot.rs
event-sourcing/src/event/: envelope.rs  listener.rs  store.rs
event-sourcing/src/snapshot/: envelope.rs  store.rs
event-store-cassandra/: Cargo.toml
event-store-cassandra/src/event/: store.rs
event-stream-kafka/src/: lib.rs
